# tumor3d

./: .env.example  .gitignore  README.md
backend/: blender_export.py  config_medical.py  config_pipeline.py  config_reconstruction.py  image_to_3d_pipeline.py  medical_pipeline.py  pyproject.toml  reconstruction_3d.py  requirements-gpu.txt
backend/api/: main.py  pipeline_routing.py  reconstruct_jobs.py
backend/db/: database.py  jobs.py
backend/pipeline/export/: nifti_export.py
backend/pipeline/image_to_3d/: __init__.py  image_preflight.py  stub_mesh.py  triposr_infer.py
backend/pipeline/ingest/: dicom_meta.py  images.py
backend/pipeline/mesh/: lesion_mesh.py  organ_mesh.py  slice_preview.py
backend/pipeline/ml/: __init__.py  brain_envelope.py  pose.py  preprocess.py  types.py  volume_generator.py  volume_refiner.py
backend/pipeline/modular/: __init__.py  anatomical_extraction.py  atlas_library.py  consensus.py  image_processing.py  mesh_optimize.py  module_assembly.py  module_detection.py  module_morph.py  multi_model_ai.py  neighbor_propagation.py  optimizer.py  orchestrator.py  organ_classifier.py  registration.py  spatial_mapping.py  structure_replacement.py  types.py  volume_completion.py  volumetric.py
backend/pipeline/reconstruct/: __init__.py  atlas_register.py  atlas_synthesis.py  atlas_volume.py  consensus.py  context.py  export_response.py  ml_synthesis.py  (+4 more)
backend/scripts/: runpod_restart.sh  runpod_start.sh  setup_brain_atlas.py  setup_brain_modules.py  setup_medsam.py  setup_ml_brain_recon.py  setup_monai_bundle.py  setup_triposr.py  smoke_test.py  train_volume_completion.py  triposr_infer_requirements.txt
backend/services/: groq_assistant.py
backend/tests/: conftest.py  test_atlas_synthesis.py  test_atlas_volume.py  test_dicom_ingest.py  test_image_preflight.py  test_medical_pipeline.py  test_ml_volume_generator.py  test_reconstruct_pipeline.py  test_reconstruction_3d.py  test_view_orient.py
(+63 files in other folders)
