[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tumor3d-backend"
version = "0.2.0"
description = "SAM 2 + TRELLIS.2 + Blender image-to-3D reconstruction API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "python-multipart>=0.0.12",
    "numpy>=1.26.0",
    "pillow>=10.4.0",
    "trimesh>=4.4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "httpx>=0.27.0", "pytest-asyncio>=0.24.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", ".."]
asyncio_mode = "auto"
markers = [
    "gpu: requires NVIDIA GPU with SAM2 and TRELLIS.2 installed",
]
