[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tumor3d-backend"
version = "0.3.0"
description = "Medical imaging chat API — tumor segmentation and 3D lesion visualization"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "python-multipart>=0.0.12",
    "numpy>=1.26.0",
    "pillow>=10.4.0",
    "trimesh>=4.4.0",
    "scipy>=1.11.0",
    "scikit-image>=0.22.0",
    "httpx>=0.27.0",
    "nibabel>=5.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "httpx>=0.27.0", "pytest-asyncio>=0.24.0"]
gpu = ["torch>=2.1.0", "monai>=1.3.0", "huggingface_hub>=0.23.0"]
dicom = ["pydicom>=2.4.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "pipeline*", "db*", "services*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", ".."]
asyncio_mode = "auto"
markers = [
    "gpu: requires NVIDIA GPU with MONAI bundle configured",
]
